# JavaArithmetic

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/test/lcz/com/arithmetic/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/test/lcz/com/arithmetic/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/test/java/test/lcz/com/arithmetic/: ExampleUnitTest.kt
arithmetic/: build.gradle
arithmetic/src/main/java/test/lcz/com/arithmetic/: ArrayChange.java  Dijkstra.java  FatherTest.java  Fibonacci.java  FindValueClass.java  SonTest.java  SortClass.java
arithmetic/src/main/java/test/lcz/com/list/: ListTest.java  Node.java
arithmetic/src/main/java/test/lcz/com/qrbarcode/: CodeScan.java
arithmetic/src/main/java/test/lcz/com/sort/: Address.java  SelectTask.java  (+3 more)
gradle/wrapper/: gradle-wrapper.properties
scancode/: CMakeLists.txt  build.gradle
scancode/src/androidTest/java/com/chenfengweiqing/decodeImage/: ExampleInstrumentedTest.java
scancode/src/main/: AndroidManifest.xml
scancode/src/main/java/com/chenfengweiqing/decodeImage/: BarcodeFormat.java  ScanCodeUtils.java
scancode/src/main/jni/: DecodeEntry.cpp  DecodeEntry.h  com_chenfengweiqing_decodeImage_ScanCodeUtils.cpp
scancode/src/main/jni/video/: null.c
scancode/src/main/jni/window/: null.c
scancode/src/main/jni/zbar/: config.c  decoder.c  decoder.h  error.h  event.h  image.h  img_scanner.c  img_scanner.h  qrcode.h  scanner.c  video.h  window.h  zbar_entry.h  zbarjni.c
scancode/src/main/jni/zxing/: MultiFormatReader.cpp
scancode/src/main/jni/zxing/multi/qrcode/: QRCodeMultiReader.h
scancode/src/main/jni/zxing/multi/qrcode/detector/: MultiDetector.cpp  MultiDetector.h  MultiFinderPatternFinder.cpp  MultiFinderPatternFinder.h
scancode/src/main/jni/zxing/qrcode/: ErrorCorrectionLevel.cpp  ErrorCorrectionLevel.h  FormatInformation.cpp  FormatInformation.h  QRCodeReader.cpp  QRCodeReader.h  Version.cpp  Version.h
scancode/src/main/jni/zxing/qrcode/decoder/: BitMatrixParser.cpp  BitMatrixParser.h  DataBlock.cpp  DataBlock.h  DataMask.cpp  DataMask.h  DecodedBitStreamParser.cpp  DecodedBitStreamParser.h  Decoder.cpp  Decoder.h  Mode.cpp  Mode.h
scancode/src/main/jni/zxing/qrcode/detector/: AlignmentPattern.cpp  AlignmentPattern.h  AlignmentPatternFinder.cpp  AlignmentPatternFinder.h  Detector.cpp  Detector.h  FinderPattern.cpp  FinderPattern.h  FinderPatternFinder.cpp  FinderPatternFinder.h  FinderPatternInfo.cpp  FinderPatternInfo.h
scancode/src/test/java/com/chenfengweiqing/decodeImage/: ExampleUnitTest.java
test/: build.gradle
test/src/androidTest/java/com/chenfengweiqing/test/: ExampleInstrumentedTest.java
test/src/main/: AndroidManifest.xml
test/src/main/java/com/chenfengweiqing/test/: MainActivity.java
test/src/test/java/com/chenfengweiqing/test/: ExampleUnitTest.java
(+2 files in other folders)
